--- a/flex_bison/flex/Makefile
+++ b/flex_bison/flex/Makefile
@@ -3,7 +3,7 @@ CC			:= gcc
 CFLAGS	?= -Wall -std=c99 -pedantic -Wno-unused-function 
 
 #paths
-AUX_DIR 						?= _out/
+AUX_DIR 						?= _build/
 OBJ_EXT 						?= .o
 IN_DIR 						?= ./
 IN_EXTS 						?= .lex .c
@@ -50,4 +50,4 @@ run: all
 	( cd $(OUT_DIR) && ./$(OUT_BASENAME) $(RUN_ARGS) )
 
 test: all
-	python test.py "$(OUT)"
+	./test "$(OUT)"
