Start boost properties, C++ improve capacity().

--- a/Makefile_many
+++ b/Makefile_many
@@ -60,6 +60,7 @@ all: mkdir $(OUTS)
 	@if [ -e "$(RUN_INPUT)" ] && [ ! -e "$(OUT_DIR)$(RUN_INPUT)" ]; then ln -s ../$(RUN_INPUT) "$(OUT_DIR)$(RUN_INPUT)"; fi
 	@-$(MAKE) all-post
 ifneq ($(strip $(run)),)
+	@echo
 	cd $(OUT_DIR) && ./"$(run)"
 endif
 
