void casts, complex, _Generic.

--- a/Makefile_params
+++ b/Makefile_params
@@ -1,4 +1,4 @@
-CFLAGS_EXTRA	:= -Wno-overflow -Wno-sequence-point -Wno-unused-variable -Wno-unused-but-set-variable -Wno-unused-label -Wno-unused-value -Wno-unused-local-typedefs
+CFLAGS_EXTRA	:= -Wno-comment -Wno-overflow -Wno-sequence-point -Wno-unused-variable -Wno-unused-but-set-variable -Wno-unused-label -Wno-unused-value -Wno-unused-local-typedefs
 CXXFLAGS_EXTRA	:= -Wno-sequence-point -Wno-unused-variable -Wno-unused-but-set-variable -pthread
 FFLAGS_EXTRA 	:= -Wno-unused-variable -Wno-unused-but-set-variable
 RUN				:= c
