--- a/fortran/Makefile
+++ b/fortran/Makefile
@@ -1,1 +1,13 @@
-../Makefile_many
+EXT ?= f
+RUN ?= main
+
+.PROXY: clean run
+
+main: $(RUN).$(EXT)
+	gfortran -o '$(RUN)' '$(RUN).$(EXT)'
+
+clean:
+	rm '$(RUN)'
+
+run: $(RUN)
+	./'$(RUN)'
