--- a/glibc/Makefile
+++ b/glibc/Makefile
@@ -1,17 +1,1 @@
-MAIN ?= main
-IN_EXT ?= c
-OUT_EXT ?= out
-
-IN := $(MAIN).$(IN_EXT)
-OUT := $(MAIN).$(OUT_EXT)
-
-.PROXY: clean run
-
-$(OUT): $(IN)
-	gcc --std=c89 -Wall -Wno-unused-variable -Wno-unused-but-set-variable -o '$@' '$<'
-
-clean:
-	rm -f '$(OUT)' *.tmp
-
-run: $(OUT)
-	./'$(OUT)'
+../c_many.makefile
