--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,4 @@ install: |
 
 script: |
   cd "$TRAVIS_BUILD_DIR"
-  cd c
-  make test
-  cd ../cpp
-  make test
-  cd ../glibc
-  make test
-  cd ../gcc
-  make test
+  ./test
