--- a/Makefile_many
+++ b/Makefile_many
@@ -8,16 +8,15 @@
 # by the Makefile default values.
 MYCC            ?= gcc
 MYCXX           ?= g++
-D               ?= #-D_XOPEN_SOURCE 700
 G               ?= gdb3
 I               ?= #-I/usr/include
 O               ?= 0
 STD             ?= c11
 PEDANTIC        ?= -pedantic-errors
-CFLAGS          ?= $(D) -g$(G) -O$(O) -std=$(STD) -Wextra $(PEDANTIC) $(CFLAGS_EXTRA)
-MYCXXFLAGS      ?= $(D) -g$(G) -O$(O) -std=c++11  -Wextra $(PEDANTIC) $(CXXFLAGS_EXTRA)
+CFLAGS          ?= -g$(G) -O$(O) -pthread -std=$(STD) -Wextra $(PEDANTIC) $(CFLAGS_EXTRA)   #-pg 
+MYCXXFLAGS      ?= -g$(G) -O$(O) -pthread -std=c++11  -Wextra $(PEDANTIC) $(CXXFLAGS_EXTRA) #-pg 
 
-LIBS            ?= -lm -pthread #-lGL -lGLU -lglut
+LIBS            ?= -lm #-lGL -lGLU -lglut
 
 # Fortran
 FF      ?= gfortran
