posix mmap and semaphores

--- a/gdb/Makefile
+++ b/gdb/Makefile
@@ -1,7 +1,9 @@
 .POSIX:
 
+G ?= gdb3
 IN_EXT ?= .c
 IN_EXT_CPP ?= .cpp
+O ?= 0
 OUT_EXT ?= .out
 RUN ?= count_infinite
 
@@ -17,10 +19,10 @@ OUTS_CPP := $(addsuffix $(OUT_EXT), $(basename $(INS_CPP)))
 all: $(OUTS) $(OUTS_CPP)
 
 %$(OUT_EXT): %$(IN_EXT)
-	gcc -O0 -ggdb3 -o '$@' -pedantic-errors -std=c89 -Wextra '$<'
+	gcc -O'$O' -g'$(G)' -o '$@' -pedantic-errors -std=c89 -Wextra '$<'
 
 %$(OUT_EXT): %$(IN_EXT_CPP)
-	g++ -O0 -ggdb3 -o '$@' -pedantic-errors -std=c++98 -Wextra '$<'
+	g++ -O'$O' -g'$(G)' -o '$@' -pedantic-errors -std=c++98 -Wextra '$<'
 
 clean:
 	rm -f *$(OUT_EXT)
