--- a/Makefile_many
+++ b/Makefile_many
@@ -16,7 +16,7 @@ PEDANTIC        ?= -pedantic-errors
 CFLAGS          ?= -g$(G) -O$(O) -pthread -std=$(STD) -Wextra $(PEDANTIC) $(CFLAGS_EXTRA)   #-pg 
 MYCXXFLAGS      ?= -g$(G) -O$(O) -pthread -std=c++11  -Wextra $(PEDANTIC) $(CXXFLAGS_EXTRA) #-pg 
 
-LIBS            ?= -lm #-lGL -lGLU -lglut
+LIBS            ?= -lm -lrt #-lGL -lGLU -lglut
 
 # Fortran
 FF      ?= gfortran
