--- a/Makefile_many
+++ b/Makefile_many
@@ -108,8 +108,10 @@ profile: clean set_profile_flags all run
 	cd '$(OUT_DIR)' && gprof -b '$(RUN_BNAME)' gmon.out | tee "$(RUN_BNAME).profile_out" | less
 
 run: all
-	@echo
 	cd $(OUT_DIR) && ./$(RUN_BNAME)
+
+time: all
+	cd $(OUT_DIR) && time -p ./$(RUN_BNAME)
 
 set_profile_flags:
 	$(eval PROFILE_FLAGS := -p -pg)
