--- a/opengl/Makefile_params
+++ b/opengl/Makefile_params
@@ -1,1 +1,1 @@
-LIBS	:= -lm -pthread -lGL -lGLU -lglut
+LIBS := -lm -pthread -lGL -lGLU -lglut -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_ml -lopencv_video -lopencv_features2d -lopencv_calib3d -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_flann
