--- a/v4l2/Makefile_params
+++ b/v4l2/Makefile_params
@@ -1,1 +1,2 @@
-LIBS := -lv4l2 -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_ml -lopencv_video -lopencv_features2d -lopencv_calib3d -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_flann -lm
+LIBS := -lv4l2 \
+	-lX11 -lGL -lGLU
