--- a/Makefile_many
+++ b/Makefile_many
@@ -5,6 +5,7 @@
 # C/CPP
 # Don't use the standard names like `CC` and `CXX` to avoid `?=` getting overridden.
 # by the Makefile default values.
+ALL_DEPEND		?=
 MYCC            ?= gcc
 MYCXX           ?= g++
 G               ?= gdb3
@@ -59,13 +60,13 @@ ifneq ($(strip $(run)),)
 	cd $(OUT_DIR) && ./"$(run)"
 endif
 
-$(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.c
+$(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.c $(ALL_DEPEND)
 	$(MYCC) $(CFLAGS) $(PROFILE_DEFINE) $(PROFILE_FLAGS) $(I) -o "$@" "$<" $(LIBS)
 
-$(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.cpp
+$(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.cpp $(ALL_DEPEND)
 	$(MYCXX) $(MYCXXFLAGS) $(PROFILE_DEFINE) $(PROFILE_FLAGS) $(I) -o "$@" "$<" $(LIBS)
 
-$(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.f
+$(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.f $(ALL_DEPEND)
 	$(FF) $(FFLAGS) $(PROFILE_DEFINE) $(PROFILE_FLAGS) -o "$@" "$<" $(FFLIBS)
 
 # Make assembly intermingled with original C code to stdout>
