--- a/opencl/Makefile_params
+++ b/opencl/Makefile_params
@@ -1,3 +1,3 @@
-LIBS := -lm -pthread -lOpenCL -lblas
+LIBS := -lm -pthread -lOpenCL -lblas -lclBLAS
 # blas from libatlas-base-dev
 # cblas from libblas-dev
