make: minimize C template

--- a/make/templates/c-many/Makefile
+++ b/make/templates/c-many/Makefile
@@ -1,53 +1,27 @@
 .POSIX:
 
--include params.makefile
+CC = gcc
+CFLGS = -ggdb3 -O0 -pedantic-errors -std=c99 -Wall -Wextra
+IN_EXT = .c
+OUT_EXT = .out
 
-O ?= 0
-STD ?= c89
-CCC ?= gcc -ggdb3 -pedantic-errors -std=$(STD) -O$(O) -Wextra
-IN_EXT ?= .c
-LIBS ?= -lm
-OUT_EXT ?= .out
-RUN ?= main
-TEST ?= test
+OUTS = $(addsuffix $(OUT_EXT), $(basename $(wildcard *$(IN_EXT))))
 
-OUTS := $(addsuffix $(OUT_EXT), $(basename $(wildcard *$(IN_EXT))))
-
-.PHONY: all clean run
+.PHONY: all clean test
 
 all: $(OUTS)
 
 %$(OUT_EXT): %$(IN_EXT)
-	$(CCC) -o '$@' '$<' $(LIBS)
+	$(CC) $(CFLGS) -o '$@' '$<'
 
 clean:
 	rm -f *'$(OUT_EXT)'
 
-run: all
-	./'$(RUN)$(OUT_EXT)'
-
-run-%: %$(OUT_EXT)
-	./'$<'
-
-# If a `test` script exists, use it.
-# Otherwise, run a default test script which checks if all programs exit 0.
 test: all
 	@\
-	if [ -x $(TEST)  ]; then\
-	  ./$(TEST) '$(OUT_EXT)';\
-	else\
-	  fail=false;\
-	  for t in *"$(OUT_EXT)"; do\
-	    if ! ./"$$t"; then\
-	      fail=true;\
-	      break;\
-	    fi;\
-	  done;\
-	  if $$fail; then\
-	    echo "ASSERT FAILED: $$t";\
-	    exit 1;\
-	  else\
-	    echo 'ALL ASSERTS PASSED';\
-	    exit 0;\
+	for t in *"$(OUT_EXT)"; do\
+	  if ! ./"$$t"; then\
+		echo "ASSERT FAILED: $$t";\
+		exit 1;\
 	  fi;\
-	fi;\
+	done;\
