C from C++: make awesome

--- a/c-from-cpp/Makefile
+++ b/c-from-cpp/Makefile
@@ -5,10 +5,10 @@ main.out: main.o c.o
 	g++ -o '$@' $^
 
 c.o: c.c
-	gcc -c -o '$@' -std=c89 -Wextra -pedantic-errors '$<'
+	gcc -c -g -o '$@' -std=c89 -Wall -Wextra -pedantic-errors '$<'
 
 main.o: main.cpp
-	g++ -c -o '$@' -std=c++98 -Wextra -pedantic-errors '$<'
+	g++ -c -g -o '$@' -std=c++98 -Wall -Wextra -pedantic-errors '$<'
 
 run: main.out
 	./main.out
