--- a/cpp-from-c/Makefile
+++ b/cpp-from-c/Makefile
@@ -5,10 +5,10 @@ main.out: main.o cpp.o
 	g++ -o '$@' $^
 
 cpp.o: cpp.cpp
-	g++ -c -o '$@' -pedantic-errors -std=c++98 -Wextra '$<'
+	g++ -c -g -o '$@' -pedantic-errors -std=c++98 -Wall -Wextra '$<'
 
 main.o: main.c
-	gcc -c -o '$@' -pedantic-errors -std=c89 -Wextra '$<'
+	gcc -c -g -o '$@' -pedantic-errors -std=c89 -Wall -Wextra '$<'
 
 run: main.out
 	./main.out
