--- a/Makefile_many
+++ b/Makefile_many
@@ -5,7 +5,7 @@
 # C/CPP
 # Don't use the standard names like `CC` and `CXX` to avoid `?=` getting overridden.
 # by the Makefile default values.
-ALL_DEPEND		?=
+ALL_DEPEND      ?=
 MYCC            ?= gcc
 MYCXX           ?= g++
 G               ?= gdb3
@@ -57,8 +57,7 @@ all: mkdir $(OUTS)
 	@if [ -e "$(RUN_INPUT)" ] && [ ! -e "$(OUT_DIR)$(RUN_INPUT)" ]; then ln -s ../$(RUN_INPUT) "$(OUT_DIR)$(RUN_INPUT)"; fi
 ifneq ($(strip $(run)),)
 	@echo
-	cd $(OUT_DIR) && ./"$(run)"
-endif
+	cd $(OUT_DIR) && ./"$(run)" endif
 
 $(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.c $(ALL_DEPEND)
 	$(MYCC) $(CFLAGS) $(PROFILE_DEFINE) $(PROFILE_FLAGS) $(I) -o "$@" "$<" $(LIBS)
